Animated Holdout & Shadow do not update in Cycles #99450

Closed
opened 2022-07-05 00:55:36 +02:00 by Travis · 21 comments

Animated holdout and shadow catcher properties do not update when rendering in Cycles. Change frames in the following file, the holdout state of the object should change but will not until the user manually changes any property in the object.

animatedHoldout.blend

Original Report

System Information
Operating system: MacOS Monterey
Graphics card: Apple M1 Max

Blender Version
3.2 - (also tried 3 & 2.9)

Short description of error
I'm rendering a product shot for a client that wants the shadows as a seperate file. I animated 2 frames in my blender file. Frame one is the product and the "ground plane" is set as holdout. Frame 2 has the product as holdout and the ground plane as a shadow catcher. The reason i've set it up animated is the output files are HUGE resolution and i'm rendering it all on blendergrid.

This solution worked until a couple of months ago I upgraded to a M1 macbook pro and now the animations don't work - they don't even preview properly in blender. Sometimes the ground plane is visible despite it being set as either holdout or shadow catcher. The products sometimes holdouts when it should appear and sometimes it stays the same for both frames. I've tested it on blendergrid with a small output - it seemed to replicate the problem.
I also tried on 2 older versions of blender and re-animated the holdout / shadow catcher setting to no avail.

MMMilk_Endorphone_cards_170x170.blend
Exact steps for others to reproduce the error
attached .blend file (as simple as possible).

Animated holdout and shadow catcher properties do not update when rendering in Cycles. Change frames in the following file, the holdout state of the object should change but will not until the user manually changes any property in the object. [animatedHoldout.blend](https://archive.blender.org/developer/F13265355/animatedHoldout.blend) ### Original Report **System Information** Operating system: MacOS Monterey Graphics card: Apple M1 Max **Blender Version** 3.2 - (also tried 3 & 2.9) **Short description of error** I'm rendering a product shot for a client that wants the shadows as a seperate file. I animated 2 frames in my blender file. Frame one is the product and the "ground plane" is set as holdout. Frame 2 has the product as holdout and the ground plane as a shadow catcher. The reason i've set it up animated is the output files are HUGE resolution and i'm rendering it all on blendergrid. This solution worked until a couple of months ago I upgraded to a M1 macbook pro and now the animations don't work - they don't even preview properly in blender. Sometimes the ground plane is visible despite it being set as either holdout or shadow catcher. The products sometimes holdouts when it should appear and sometimes it stays the same for both frames. I've tested it on blendergrid with a small output - it seemed to replicate the problem. I also tried on 2 older versions of blender and re-animated the holdout / shadow catcher setting to no avail. [MMMilk_Endorphone_cards_170x170.blend](https://archive.blender.org/developer/F13259412/MMMilk_Endorphone_cards_170x170.blend) **Exact steps for others to reproduce the error** attached .blend file (as simple as possible).
Author

Added subscriber: @MMMilk

Added subscriber: @MMMilk
Author

....seems to work in 2.92.
no luck with other versions though

....seems to work in 2.92. no luck with other versions though
Member

Added subscriber: @OmarEmaraDev

Added subscriber: @OmarEmaraDev
Member

Changed status from 'Needs Triage' to: 'Needs User Info'

Changed status from 'Needs Triage' to: 'Needs User Info'
Member

In the attached file, the RNA paths of the animation are set to cycles.is_shadow_catcher and cycles.is_holdout, and it seems the API changed and the properties are now part of the ID directly, so you should remove the cycles. prefix from the path in order for the animation to work again. That might indicate that versioning does not exist for this change.

In the attached file, the RNA paths of the animation are set to `cycles.is_shadow_catcher` and `cycles.is_holdout`, and it seems the API changed and the properties are now part of the ID directly, so you should remove the `cycles.` prefix from the path in order for the animation to work again. That might indicate that versioning does not exist for this change.
Member

Changed status from 'Needs User Info' to: 'Confirmed'

Changed status from 'Needs User Info' to: 'Confirmed'
Member

Looks like versioning for animations is not available indeed.

Looks like versioning for animations is not available indeed.
Member

Changed status from 'Confirmed' to: 'Needs User Info'

Changed status from 'Confirmed' to: 'Needs User Info'
Member

But you say this also happens in 2.9, so there might be an issue other than versioning here.

But you say this also happens in 2.9, so there might be an issue other than versioning here.
Author

yes the original file didn't work past 2.92

I did also clear the animation keys in 3.2 and reanimated the holdout / shadow catcher check boxes and still had inconsistent results

yes the original file didn't work past 2.92 I did also clear the animation keys in 3.2 and reanimated the holdout / shadow catcher check boxes and still had inconsistent results
Member

Could you attach the files after you cleared and reanimated the animation keys? I did the same but can't seem to replicate the issue.

Could you attach the files after you cleared and reanimated the animation keys? I did the same but can't seem to replicate the issue.
Author
[MMMilk__cards_170x170_b3.2_test.blend](https://archive.blender.org/developer/F13265269/MMMilk__cards_170x170_b3.2_test.blend) ![Screen Shot 2022-07-07 at 9.39.36 pm.png](https://archive.blender.org/developer/F13265271/Screen_Shot_2022-07-07_at_9.39.36_pm.png)
Member

Changed status from 'Needs User Info' to: 'Confirmed'

Changed status from 'Needs User Info' to: 'Confirmed'
Omar Emara changed title from Animating Holdout & Shadow catcher not working (cycles) to Animated Holdout & Shadow do not update in Cycles 2022-07-07 14:11:16 +02:00
Member

Added subscribers: @Sergey, @brecht, @LukasStockner

Added subscribers: @Sergey, @brecht, @LukasStockner
Member

The problem here appears to be that the Holdout control is handled through the view layer system - to be precise, layer_collection_objects_sync. This gets called from the RNA update handler of the holdout property, but that doesn't get called for animated properties on frame change of course.

I guess a simple fix would be to call BKE_layer_collection_sync before rendering? That seems like a hack though, I feel like there should be a cleaner way to handle this update.

cc @brecht and @sergey.

The problem here appears to be that the Holdout control is handled through the view layer system - to be precise, `layer_collection_objects_sync`. This gets called from the RNA update handler of the holdout property, but that doesn't get called for animated properties on frame change of course. I guess a simple fix would be to call `BKE_layer_collection_sync` before rendering? That seems like a hack though, I feel like there should be a cleaner way to handle this update. cc @brecht and @sergey.

@LukasStockner I think we should remove handling of the object holdout settings from layer collection sync, and instead wrapper access to it in a function that checks both the base flag and the object flag.

At some point it would be good to integrate layer collection sync better with the depsgraph, but I wouldn't get into that for this bugfix.

@LukasStockner I think we should remove handling of the object holdout settings from layer collection sync, and instead wrapper access to it in a function that checks both the base flag and the object flag. At some point it would be good to integrate layer collection sync better with the depsgraph, but I wouldn't get into that for this bugfix.

Added subscriber: @KamilD

Added subscriber: @KamilD

Hello.
I have the same issue with one of my scene.
holdout is not animated.
Is there any solution for it ? I really need this funkcionality.
probably I could use blender 2.92 but cycles is more faster in 3.3

Hello. I have the same issue with one of my scene. holdout is not animated. Is there any solution for it ? I really need this funkcionality. probably I could use blender 2.92 but cycles is more faster in 3.3

This issue was referenced by 1492f566c8

This issue was referenced by 1492f566c83c7c7a631ecc8b0c9113981fda75c5

This issue was referenced by b898330c37

This issue was referenced by b898330c3744669a8c3805f1560130821422cca1
Member

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'
Lukas Stockner self-assigned this 2022-10-15 23:12:52 +02:00
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset System
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Asset Browser Project
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
6 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#99450
No description provided.