source/blender/makesrna/intern/rna_object_api.c
@@ -192,7 +192,7 @@ static bool rna_Object_holdout_get(Object *ob, bContext *C, ViewLayer *view_laye
     return false;
   }
 
-  return ((base->flag & BASE_HOLDOUT) != 0);
+  return ((base->flag & BASE_HOLDOUT) != 0) || ((ob->visibility_flag & OB_HOLDOUT) != 0);
 }
 
 static bool rna_Object_indirect_only_get(Object *ob, bContext *C, ViewLayer *view_layer)
